loro/test/valid/persona/demoPersona3.loro
/////////////////////////////////////////////////////////////////
algoritmo demoPersona3 para PRUEBA()
	estrategia ""
inicio
	pers: []Persona := crear [3]Persona;
	para i:entero := 0 hasta #pers - 1 haga
		pers[i] := crear Persona("nom" +i, 15 + i);
	fin para;

	para i:entero := 0 hasta #pers - 1 haga
		escribir("Nombre: " +pers[i].nombre+ " ");
		escribirln("Edad  : " +pers[i].edad);
	fin para;

	escribirln(@pers);
fin algoritmo